--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,18 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - images/1.jpeg
+    - images/2.jpeg
+    - images/3.jpeg
+    - images/4.jpeg
+    - images/5.jpeg
+    - images/6.jpeg
+    - images/7.jpeg
+    - images/8.jpeg
+    - images/9.jpeg
+    - images/wudang.jpeg
+    - images/code.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
